# ChunkyMonkey

./: .gitignore  CLI_README.md  Cargo.toml  README.md  add_embeddings_docs.py  cli_requirements.txt  cli_vector_search.py  cm  config.toml  config.toml.example  demo_cli.py  docker-compose.yml  install.sh  install_cli.sh  install_cm.sh  rag_systems_technical.md  sample.txt  setup_ollama.sh  shell_setup.sh  start.sh  test_ollama_pinecone.py  test_pinecone.py  test_rag_pipeline.py  tldr.db  vector_embeddings_guide.md
backend/: app.py  db.py  models.sql  requirements.txt  util_chunk.py  util_embeddings.py  util_projection.py
demo/: README.md  auth.py  config.yaml
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/: config.ts
frontend/src/components/: Canvas.tsx  Projection.tsx  QueryPanel.tsx  RAGPanel.tsx  Upload.tsx
src/: main.rs
src/cli/: interactive.rs
src/core/: app.rs  app.rs.backup  config.rs  mod.rs  pinecone.rs  types.rs
src/db/: mod.rs
src/embeddings/: mod.rs  ollama.rs  openai.rs
src/pinecone/: mod.rs
src/search/: indexer.rs  mod.rs
src/ui/: mod.rs
src/vector_search/: mod.rs
