[package]
name = "tldr"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "TLDR - Too Long; Didn't Read. Blazing-fast semantic search through any directory."
license = "MIT"
repository = "https://github.com/yourusername/tldr"
keywords = ["search", "semantic", "vector", "embeddings", "cli", "code"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
# CLI Framework
clap = { version = "4.0", features = ["derive"] }
console = "0.15"
colored = "2.0"

# Database
rusqlite = { version = "0.29", features = ["bundled"] }

# Async & Utilities
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.3"
glob = "0.3"
regex = "1.0"
sha2 = "0.10"

# Text Processing
unicode-segmentation = "1.10"
unicode-normalization = "0.1"

# Progress & UI
indicatif = "0.17"

# Configuration
config = "0.13"
dirs = "5.0"
dotenv = "0.15"

# Pinecone integration
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
base64 = "0.21"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.1"

[[bin]]
name = "tldr"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true 