[package]
name = "tldr"
version = "0.1.0"
edition = "2021"
description = "Too Long; Didn't Read - Semantic Search Made Simple"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
console = "0.15"
indicatif = "0.17"
rusqlite = { version = "0.29", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"
thiserror = "1.0"
walkdir = "2.3"
glob = "0.3"
regex = "1.9"
sha2 = "0.10"
unicode-segmentation = "1.10"
unicode-normalization = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 